/cp 2007-10-16  Paolo Carlini  <pcarlini@suse.de>

PR c++/31446
	* pt.c (current_template_args): Do not change TREE_LIST elements
	with a TREE_VALUE of error_mark_node.

/testsuite
2007-10-16  Paolo Carlini  <pcarlini@suse.de>

	PR c++/31446
	* g++.dg/template/void11.C: New.
	* g++.dg/template/void2.C: Adjust error markers.
	* g++.dg/template/void10.C: Likewise.
	* g++.dg/template/crash55.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129391 138bc75d-0d04-0410-961f-82ee72b054a4