gcc/testsuite/g++.dg/template/void11.C
@@ -1,0 +1,12 @@
+// PR c++/31446
+
+template<void> struct A // { dg-error "valid type" }
+
+{
+  template<int> friend void foo();
+};
+
+void bar()
+{
+  foo<0>(); // { dg-error "not declared|primary-expression" }
+}
